--- a/biodata.html
+++ b/biodata.html
@@ -2,10 +2,12 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
-<title>Bio-data</title>
+<title>Bio-data - Assignment-06</title>
 <link rel="stylesheet" href="style.css">
+
 <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 <script src="script.js"></script>
+
 </head>
 <body>
 
@@ -20,15 +22,15 @@
 </nav>
 
 <section>
-    <table>
-        <tr><th>Name</th><td>SANA MUNIR</td></tr>
-        <tr><th>Date of Birth</th><td>16 MAY 2003</td></tr>
-        <tr><th>Gender</th><td>Female</td></tr>
-        <tr><th>Father’s Name</th><td>MUNEER AHMED</td></tr>
-        <tr><th>Address</th><td>SG PALYA BANGALORE,KARNATAKA</td></tr>
-        <tr><th>Languages Known</th><td>English, Hindi</td></tr>
-        <tr><th>Nationality</th><td>Indian</td></tr>
-    </table>
+<table>
+    <tr><th>Name</th><td>User Name</td></tr>
+    <tr><th>Date of Birth</th><td>01 January 2000</td></tr>
+    <tr><th>Gender</th><td>Female</td></tr>
+    <tr><th>Father's Name</th><td>Mr. ABC</td></tr>
+    <tr><th>Address</th><td>Your Address Here</td></tr>
+    <tr><th>Languages Known</th><td>English, Hindi</td></tr>
+    <tr><th>Nationality</th><td>Indian</td></tr>
+</table>
 </section>
 
 </body>
