--- a/index.html
+++ b/index.html
@@ -2,10 +2,15 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
-<title>Home - My Website</title>
+<title>Home - Assignment-06</title>
 <link rel="stylesheet" href="style.css">
+
+<!-- jQuery -->
 <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+
+<!-- JavaScript -->
 <script src="script.js"></script>
+
 </head>
 <body>
 
@@ -21,8 +26,19 @@
 
 <section>
     <h2>About This Website</h2>
-    <p>This website contains my Resume and Bio-data created using HTML, CSS, and jQuery/JavaScript.</p>
+    <p>This website contains my Resume and Bio-data created using HTML, CSS, and JavaScript/jQuery.</p>
 </section>
+
+
+<!-- POPUP WINDOW -->
+<div id="welcomePopup" class="popup">
+    <div class="popup-content">
+        <h2>Welcome to My Website</h2>
+        <p>Hello User, glad to see you here!</p>
+        <button id="closePopup">OK</button>
+    </div>
+</div>
+
 
 </body>
 </html>
