--- a/resume.html
+++ b/resume.html
@@ -2,10 +2,12 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
-<title>Resume</title>
+<title>Resume - Assignment-06</title>
 <link rel="stylesheet" href="style.css">
+
 <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 <script src="script.js"></script>
+
 </head>
 <body>
 
@@ -20,7 +22,7 @@
 </nav>
 
 <section>
-    <h2>Your Name</h2>
+    <h2>User Name</h2>
 
     <h3>Professional Summary</h3>
     <p>Motivated individual with strong skills in web development and programming.</p>
