--- a/biodata.html
+++ b/biodata.html
@@ -23,15 +23,16 @@
 
 <section>
 <table>
-    <tr><th>Name</th><td>User Name</td></tr>
-    <tr><th>Date of Birth</th><td>01 January 2000</td></tr>
+    <tr><th>Name</th><td>Sana munir</td></tr>
+    <tr><th>Date of Birth</th><td>16 May 2004</td></tr>
     <tr><th>Gender</th><td>Female</td></tr>
-    <tr><th>Father's Name</th><td>Mr. ABC</td></tr>
-    <tr><th>Address</th><td>Your Address Here</td></tr>
-    <tr><th>Languages Known</th><td>English, Hindi</td></tr>
+    <tr><th>Father's Name</th><td>Muneer ahmed</td></tr>
+    <tr><th>Address</th><td>SG PALYA, BANGALORE, KARNATAKA</td></tr>
+    <tr><th>Languages Known</th><td>English, Hindi, Urdu</td></tr>
     <tr><th>Nationality</th><td>Indian</td></tr>
 </table>
 </section>
 
 </body>
 </html>
+
