--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 <div id="welcomePopup" class="popup">
     <div class="popup-content">
         <h2>Welcome to My Website</h2>
-        <p>Hello sana, glad to see you here!</p>
+        <p>Hello Naziya mam, glad to see you here!</p>
         <button id="closePopup">OK</button>
     </div>
 </div>
@@ -42,4 +42,5 @@
 
 </body>
 </html>
+
 
