--- a/resume.html
+++ b/resume.html
@@ -29,21 +29,24 @@
 
     <h3>Education</h3>
     <ul>
-        <li>B.Tech in Computer Science — XYZ University</li>
+        <li>B.E in Computer Science — Ghousia institute of technology for women</li>
+        <li>PUC - Prerana clg</li>
+        <li>SSLC - Mahatma Gandhi school</li>
     </ul>
 
     <h3>Skills</h3>
     <ul>
         <li>HTML, CSS, JavaScript, jQuery</li>
-        <li>Python, Java</li>
+        <li>Python, Java, GIT</li>
         <li>Problem-solving & teamwork</li>
     </ul>
 
     <h3>Experience</h3>
     <ul>
-        <li>Intern at ABC Company — Worked on web development projects.</li>
+        <li>As a fresher Iam gaining practical experience through academic projects, lab work, and self-learning, and Iam eager to apply my skills in an internship.</li>
     </ul>
 </section>
 
 </body>
 </html>
+
