--- a/resume.html
+++ b/resume.html
@@ -22,7 +22,7 @@
 </nav>
 
 <section>
-    <h2>User Name</h2>
+    <h2>Sana Munir</h2>
 
     <h3>Professional Summary</h3>
     <p>Motivated individual with strong skills in web development and programming.</p>
@@ -49,4 +49,5 @@
 
 </body>
 </html>
+
 
