--- a/biodata.html
+++ b/biodata.html
@@ -24,9 +24,9 @@
 <section>
 <table>
     <tr><th>Name</th><td>Sana munir</td></tr>
-    <tr><th>Date of Birth</th><td>16 May 2004</td></tr>
-    <tr><th>Gender</th><td>Female</td></tr>
     <tr><th>Father's Name</th><td>Muneer ahmed</td></tr>
+     <tr><th>Mother's Name</th><td>Ayesha Rizwana</td></tr>
+     <tr><th>Gender</th><td>Female</td></tr>
     <tr><th>Address</th><td>SG PALYA, BANGALORE,KARNATAKA</td></tr>
     <tr><th>Languages Known</th><td>English, Hindi, Urdu</td></tr>
     <tr><th>Nationality</th><td>Indian</td></tr>
@@ -35,3 +35,4 @@
 
 </body>
 </html>
+
