--- a/biodata.html
+++ b/biodata.html
@@ -26,6 +26,7 @@
     <tr><th>Name</th><td>Sana munir</td></tr>
     <tr><th>Father's Name</th><td>Muneer ahmed</td></tr>
      <tr><th>Mother's Name</th><td>Ayesha Rizwana</td></tr>
+     <tr><th>DOB</th><td>16 May</td></tr>
      <tr><th>Gender</th><td>Female</td></tr>
     <tr><th>Address</th><td>SG PALYA, BANGALORE,KARNATAKA</td></tr>
     <tr><th>Languages Known</th><td>English, Hindi, Urdu</td></tr>
@@ -35,4 +36,5 @@
 
 </body>
 </html>
+
 
