--- a/biodata.html
+++ b/biodata.html
@@ -29,12 +29,13 @@
 </div>
 
 <table>
-    <tr><th>Name</th><td>User Name</td></tr>
-    <tr><th>Date of Birth</th><td>01 January 2000</td></tr>
+    <tr><th>Name</th><td>Sana munir</td></tr>
     <tr><th>Gender</th><td>Female</td></tr>
-    <tr><th>Father's Name</th><td>Mr. ABC</td></tr>
-    <tr><th>Address</th><td>Your Address Here</td></tr>
-    <tr><th>Languages Known</th><td>English, Hindi</td></tr>
+    <tr><th>Father's Name</th><td>Muneer Ahmed</td></tr>
+    <tr><th>Mother's Name</th><td>Ayesha Rizwana</td></tr>
+    <tr><th>Date of Birth</th><td>16 May</td></tr>
+    <tr><th>Address</th><td>SG PALYA BANGALORE,KARNATAKA</td></tr>
+    <tr><th>Languages Known</th><td>English, Hindi, Urdu, Kannada</td></tr>
     <tr><th>Nationality</th><td>Indian</td></tr>
 </table>
 
@@ -42,3 +43,4 @@
 
 </body>
 </html>
+
