--- a/biodata.html
+++ b/biodata.html
@@ -34,7 +34,7 @@
     <tr><th>Father's Name</th><td>Muneer Ahmed</td></tr>
     <tr><th>Mother's Name</th><td>Ayesha Rizwana</td></tr>
     <tr><th>Date of Birth</th><td>16 May</td></tr>
-    <tr><th>Address</th><td>SG PALYA BANGALORE,KARNATAKA</td></tr>
+    <tr><th>Address</th><td>SG Palya Bangalore,Karnataka</td></tr>
     <tr><th>Languages Known</th><td>English, Hindi, Urdu, Kannada</td></tr>
     <tr><th>Nationality</th><td>Indian</td></tr>
 </table>
@@ -43,4 +43,5 @@
 
 </body>
 </html>
+
 
