--- a/biodata.html
+++ b/biodata.html
@@ -7,6 +7,15 @@
 
 <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 <script src="script.js"></script>
+<style>
+    /* Inline CSS for passport photo size */
+    .photo-section img {
+        width: 2in;   /* 2 inches wide */
+        height: 2in;  /* 2 inches tall */
+        object-fit: cover; /* ensures proper cropping */
+        border: 1px solid #000; /* optional border */
+    }
+</style>
 
 </head>
 <body>
@@ -43,5 +52,6 @@
 
 </body>
 </html>
+
 
 
