--- a/biodata.html
+++ b/biodata.html
@@ -38,7 +38,8 @@
 
     <!-- PHOTO SECTION (right side) -->
     <div class="photo">
-        <img src="sana_photo.jpg" alt="User Photo">
+        <img src="sana_photo.jpg" alt="User Photo"
+             style="width:2in; height:2in; object-fit:cover; border:2px solid #ccc; box-shadow:0 2px 8px rgba(0,0,0,0.1);">
     </div>
 
 </section>
