--- a/biodata.html
+++ b/biodata.html
@@ -22,7 +22,7 @@
 
 <section class="biodata-container">
 
-    <!-- DATA SECTION (left side) -->
+    <!-- DATA SECTION -->
     <div class="data">
         <table>
             <tr><th>Name</th><td>Sana Munir</td></tr>
@@ -36,7 +36,7 @@
         </table>
     </div>
 
-    <!-- PHOTO SECTION (right side) -->
+    <!-- PHOTO SECTION -->
     <div class="photo">
         <img src="sana_photo.jpg" alt="User Photo"
              style="width:2in; height:2in; object-fit:cover; border:2px solid #ccc; box-shadow:0 2px 8px rgba(0,0,0,0.1);">
