--- a/index.html
+++ b/index.html
@@ -29,14 +29,15 @@
     <p>This website contains my Resume and Bio-data created using HTML, CSS, and JavaScript/jQuery.</p>
 </section>
 
-<!-- ========================= -->
-<!--      POPUP MODAL HTML     -->
-<!-- ========================= -->
+
+<!-- =================================== -->
+<!--            BEAUTIFUL POPUP          -->
+<!-- =================================== -->
 <div class="popup-overlay" id="welcomePopup">
     <div class="popup-box">
-        <h2>Welcome to My Website</h2>
+        <h2>🌟 Welcome to My Website 🌟</h2>
         <p>Hello Naziya mam, glad to see you here!</p>
-        <button class="popup-close" onclick="closePopup()">OK</button>
+        <button class="popup-close">OK</button>
     </div>
 </div>
 
