--- a/biodata.html
+++ b/biodata.html
@@ -37,9 +37,8 @@
     </div>
 
     <!-- PHOTO SECTION -->
-    <div class="photo">
-        <img src="sana_photo.jpg" alt="User Photo"
-             style="width:2in; height:2in; object-fit:cover; border:2px solid #ccc; box-shadow:0 2px 8px rgba(0,0,0,0.1);">
+    <div class="photo-section">
+        <img src="sana_photo.jpg" alt="User Photo">
     </div>
 
 </section>
