--- a/biodata.html
+++ b/biodata.html
@@ -22,12 +22,7 @@
 
 <section class="biodata-container">
 
-    <!-- PHOTO SECTION -->
-    <div class="photo-section">
-        <img src="sana_photo.jpg" alt="User Photo">
-    </div>
-
-    <!-- DATA SECTION -->
+    <!-- DATA SECTION (left side) -->
     <div class="data">
         <table>
             <tr><th>Name</th><td>Sana Munir</td></tr>
@@ -39,6 +34,11 @@
             <tr><th>Languages Known</th><td>English, Hindi, Urdu, Kannada</td></tr>
             <tr><th>Nationality</th><td>Indian</td></tr>
         </table>
+    </div>
+
+    <!-- PHOTO SECTION (right side) -->
+    <div class="photo-section">
+        <img src="sana_photo.jpg" alt="User Photo">
     </div>
 
 </section>
